force-app/main/default/objects/sf_devops__Vcs__c/fields/sf_devops__Base_URL__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Base_URL__c</fullName>
    <label>Base URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>