force-app/main/default/objects/sf_devops__Vcs__c/fields/sf_devops__Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Service_Provider__c</fullName>
    <description>The name of the VCS Provider for this VCS.</description>
    <label>Service Provider</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>