force-app/main/default/objects/sf_devops__Vcs__c/validationRules/sf_devops__Base_Url_No_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Base_Url_No_Change</fullName>
    <active>true</active>
    <description>Enforce the Base URL field cannot be changed.</description>
    <errorConditionFormula>ISCHANGED(sf_devops__Base_URL__c)</errorConditionFormula>
    <errorMessage>The Base_Url__c of a VCS cannot be changed.</errorMessage>
</ValidationRule>