force-app/main/default/objects/sf_devops__Vcs__c/validationRules/sf_devops__Service_Provider_No_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Service_Provider_No_Change</fullName>
    <active>true</active>
    <description>Enforce the Service Provider field cannot be changed.</description>
    <errorConditionFormula>ISCHANGED(sf_devops__Service_Provider__c)</errorConditionFormula>
    <errorMessage>The Service_Provider__c of a VCS cannot be changed.</errorMessage>
</ValidationRule>