force-app/main/default/objects/sf_devops__Vcs__c/listViews/sf_devops__All.listView-meta.xml
<ListView>
    <fullName>sf_devops__All</fullName>
    <columns>NAME</columns>
    <columns>sf_devops__Base_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>